--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-bs4 = "*"
-ipdb = "*"
+bs4 = "0.0.1"
+ipdb = "0.13.9"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8.13"
